--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -380,25 +380,25 @@ template(name='voting_tiny')
 template(name='voting_full')
     // unless is_author
     i.thumbs.up.large.big.link.icon.upvote(class=upvote_class title='upvote')
-    // i.thumbs.down.large.big.link.icon.downvote(class=downvote_class title='downvote')
-    // if points
-    //     |&nbsp;
-    //     span(title='points') #{points} pts
+    i.thumbs.down.large.big.link.icon.downvote(class=downvote_class title='downvote')
+    if points
+        |&nbsp;
+        span(title='points') #{points} pts
         //- .ui.large.basic.label(title='anon points') #{anon_points} anon pts
     if upvoter_ids
-        // div
-        // .ui.small.grey.inline.header(title='upvoters')
-        //     i.thumbs.up.outline.green.icon
-            //- |upvoters
+        div
+        .ui.small.grey.inline.header(title='upvoters')
+            i.thumbs.up.outline.green.icon
+            |upvoters
         each upvoter_ids
             +user_info
-    // if downvoter_ids
-    //     // div
-    //     .ui.small.grey.inline.header(title='downvoters')
-    //         i.thumbs.down.outline.icon
-    //         //- |downvoters
-    //     each downvoter_ids
-    //         +user_info
+    if downvoter_ids
+        div
+        .ui.small.grey.inline.header(title='downvoters')
+            i.thumbs.down.outline.icon
+            |downvoters
+        each downvoter_ids
+            +user_info
 
 
 
