--- a/client/love.jade
+++ b/client/love.jade
@@ -130,6 +130,7 @@ template(name='love')
                             |#{points}
                             i.thumbs.down.link.outline.icon.downvote
                             |#{made_when}
+                            +voting_full
                             // .ui.tiny.icon.input
                             //     i.grey.tag.icon
                             //     input.add_tag(type='text' placeholder='+')
@@ -145,6 +146,7 @@ template(name='love')
                                 i.grey.user.outline.icon
                                 |#{author}
                             a.ui.icon.compact.basic.circular.button(href="/love/#{_id}/view")
+                                |#{views}
                                 i.chevron.right.icon
                                     
                                 
@@ -225,6 +227,9 @@ template(name='love_view')
                     .spacer
                     +comments
                 .four.wide.column
+                    if can_edit 
+                        a.ui.circular.icon.basic.button(href="/love/#{_id}/edit")
+                            i.big.pencil.icon
                     .ui.header viewed by
                     each viewer_ids
                         +user_info
@@ -241,3 +246,36 @@ template(name='love_view')
                         
                     .ui.header related links
                     .ui.button.search_dao search in dao
+                    
+                    
+                    
+                    
+template(name='love_edit')
+    with current_doc
+        .ui.stackable.padded.grid
+            .row
+                .four.wide.column.scrolling
+                    a.ui.icon.circular.basic.big.button(href="/love/#{_id}" title='save')
+                        i.checkmark.big.green.icon
+                    .ui.inline.header 
+                        i.pencil.icon
+                        |edit love post
+                    i.large.link.red.remove.icon.delete_post
+                    +image_edit key='image_id' label='image' direct=true
+                    div 
+                    +array_edit key='tags' label='tags' direct=true
+                    +link_edit key='link' label='link' direct=true
+                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    // +raw_edit key='raw' label='raw' direct=true
+                    +boolean_edit key='private' label='private' direct=true
+                    // +text_edit key='group' label='group' direct=true
+                .twelve.wide.column.scrolling
+                    +text_edit key='l_value' label='l value' direct=true
+                    +text_edit key='o_value' label='o value' direct=true
+                    +text_edit key='v_value' label='v value' direct=true
+                    +text_edit key='e value' label='e value' direct=true
+                    +html_edit key='content' label='content' direct=true
+                    +image_link_edit key='image_link' direct=true
+                    +youtube_edit key='youtube_id' label='youtube id' direct=true
+                    
