--- a/client/client.jade
+++ b/client/client.jade
@@ -1,12 +1,12 @@
 head
-    title dao
+    title love
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
     meta(name="msapplication-TileColor" content="#da532c")
     meta(name="theme-color" content="black")
     link(href="https://fonts.googleapis.com/css?family=Ubuntu:300&display=swap" rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet")
+    // link(href="https://fonts.googleapis.com/css?family=Lato:300&display=swap" rel="stylesheet")
     //- script(src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js")
 
     link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
