init stats page with counters, combine login and register

--- a/client/love.jade
+++ b/client/love.jade
@@ -3,24 +3,24 @@ template(name='love')
         .sixteen.wide.center.aligned.column.smallscroll
             .ui.inline.header 
                 |what is
-            .ui.labeled.large.transparent.input
-                a.ui.big.basic.label(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') l
+            .ui.large.transparent.input
+                a.ui.large.inline.header(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') l
                 input.add_l(type='text' placeholder='...')
-            .ui.labeled.large.transparent.input
-                a.ui.big.basic.label(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') o
+            .ui.large.transparent.input
+                a.ui.large.inline.header(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') o
                 input.add_o(type='text' placeholder='...')
-            .ui.labeled.large.transparent.input
-                a.ui.big.basic.label(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') v
+            .ui.large.transparent.input
+                a.ui.large.inline.header(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') v
                 input.add_v(type='text' placeholder='...')
-            .ui.labeled.large.transparent.input
-                a.ui.big.basic.label(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') e
+            .ui.large.transparent.input
+                a.ui.large.inline.header(href='https://www.thefreedictionary.com/words-that-start-with-e' target='_window') e
                 input.add_e(type='text' placeholder='...')
             .ui.labeled.transparent.input
                 .ui.large.basic.label 
                     i.marker.grey.icon
                     |location
                 input.add_location(type='text' placeholder='...')
-            .ui.labeled.input
+            .ui.labeled.transparent.input
                 .ui.large.basic.label 
                     i.outline.user.grey.icon
                     |author
