--- a/client/style.css
+++ b/client/style.css
@@ -637,7 +637,7 @@ a.title, #title {
 
 .label {
   margin:1px !important;
-  /*border-radius: 10px !important; */
+  border-radius: 10px !important; 
 }
 
 input {
