--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -385,20 +385,21 @@ template(name='voting_full')
         |&nbsp;
         span(title='points') #{points} pts
         //- .ui.large.basic.label(title='anon points') #{anon_points} anon pts
-    if upvoter_ids
-        div
-        .ui.small.grey.inline.header(title='upvoters')
-            i.thumbs.up.outline.green.icon
-            // |upvoters
-        each upvoter_ids
-            +user_info
-    if downvoter_ids
-        div
-        .ui.small.grey.inline.header(title='downvoters')
-            i.thumbs.down.outline.icon
-            // |downvoters
-        each downvoter_ids
-            +user_info
+    if currentUser
+        if upvoter_ids
+            div
+            .ui.small.grey.inline.header(title='upvoters')
+                i.thumbs.up.outline.green.icon
+                // |upvoters
+            each upvoter_ids
+                +user_info
+        if downvoter_ids
+            div
+            .ui.small.grey.inline.header(title='downvoters')
+                i.thumbs.down.outline.icon
+                // |downvoters
+            each downvoter_ids
+                +user_info
 
 
 
