v1 profile agg stats and emotions

--- a/client/stats.jade
+++ b/client/stats.jade
@@ -19,3 +19,6 @@ template(name='stats')
             .ui.header 
                 i.donate.icon
                 |#{tip_count} tips
+            .ui.header 
+                i.newspaper.icon
+                |#{post_count} posts
