--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title love
+    title dao
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -42,7 +42,7 @@ template(name='layout')
 template(name='nav')
     .ui.fluid.attached.borderless.inverted.three.item.menu.hscroll
         a.icon.item.clear(href="/" class="{{isActiveRoute regex='home'}}")
-            i.heart.red.big.icon
+            i.heart.big.icon
         a.icon.item.clear(href="/stats" class="{{isActiveRoute 'stats'}}")
             i.line.chart.big.icon
         if currentUser
@@ -58,6 +58,7 @@ template(name='nav')
                 else 
                     i.user.icon
                 strong.mobile.hidden #{currentUser.name}
+                |&nbsp;
                 |#{currentUser.points}p
         else
             // a.icon.item(href="/register" title='login')
