first checkpoint of decent folding love into dao posts and changing love into home

--- a/parts/group_post.jade
+++ b/parts/group_post.jade
@@ -100,7 +100,7 @@ template(name='group_post_view')
                             +doc_emotion
                         |#{tags.length}
                         each tags
-                            +flat_tag_picker
+                            +group_flat_tag_picker
                     .ui.label #{points}
                         
 template(name='group_post_edit')
