--- a/client/client.jade
+++ b/client/client.jade
@@ -42,7 +42,7 @@ template(name='layout')
 template(name='nav')
     .ui.fluid.attached.borderless.inverted.three.item.menu.hscroll
         a.icon.item.clear(href="/" class="{{isActiveRoute regex='home'}}")
-            i.heart.big.icon
+            i.yin.yang.big.icon
         a.icon.item.clear(href="/stats" class="{{isActiveRoute 'stats'}}")
             i.line.chart.big.icon
         if currentUser
